Use clipboard.js and add dotfiles.adoc to test.

--- a/pages/articles/cuis-smalltalk.adoc
+++ b/pages/articles/cuis-smalltalk.adoc
@@ -1,6 +1,9 @@
 = Cuis Smalltalk
 :toc: preamble
 :toclevels: 4
+:assetsdir: ../../assets
+:docinfodir: ..
+:docinfo: shared
 
 include::../_navhome.adoc[]
 
